--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,21 @@
+.container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
 
-/* Your CSS Code here. */
+.moviePic {
+  height: 300px;
+  width: auto;
+  opacity: 0.8;
+}
+
+.movieDetail {
+  position: absolute;
+  top: 50%;
+  width: 80%;
+  text-align: center;
+  font-size: 20px;
+}
